# cfd-trading

./: .env.example  .gitignore  CFD_Trading_Architecture.docx  CLAUDE.md  Containerfile  README.md  TODO.md  podman-compose.dev.yml  podman-compose.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
analysis/audit_archive/: README.md  a2_slicing.py  a3b_price_persist_by_cell.csv  a3b_price_persist_sweep.csv  a3b_stopcap_atrx25_trades.csv  a3b_stopcap_by_cell.csv  a3b_stopcap_sim.py  a3b_stopcap_sweep.csv  a3b_zexit_by_cell.csv  a3b_zexit_sim.py  a3b_zexit_sweep.csv  build_trade_inspection_nb.py  ranked_cells.csv  ranked_cells_thin.csv  trades_M15.parquet
analysis/d2_news/: README.md  build_dataset.py  d2_analyze.py  d2_news_events.parquet  d2_run_2026-05-26.md  d2_run_2026-05-26.parquet  d2_signals.parquet  run_backtest.py  scrape_calendar.py  tz_gate.py
analysis/d2_probe/: calendar_probe.mq5  calendar_probe2.mq5
audit/: build_d3_inspection_nb.py  d3_analyze.py  d3_run_2026-05-21.md  d3_run_2026-05-21.parquet
backtest/: fetch_ohlc.py  probe_history.py
config/: risk.yaml  watchlist.yaml
config/strategies/: _base.md  intraday_continuation.md  intraday_continuation.yaml  mean_reversion.md  mean_reversion.yaml  momentum.md  momentum.yaml  orb.md  orb.yaml  scan.md
docs/: BACKTESTING.md  CFD_STRATEGY_CATALOG.md  GLOSSARY.md  RESEARCH.md  STRATEGY_AUDIT.md  SYSTEM_DESIGN.md  USER_GUIDE.md
integration-test/: SMOKE_TESTS.md  mcp-fix-config.sh  mcp-start.sh  mcp-status.sh  mcp-stop.sh
src/cfd_trading/: __init__.py  server.py
tests/unit/: test_engine.py  (+13 more)
(+23 files in other folders)
