[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cfd-trading"
version = "0.1.0"
description = "AI-driven CFD trading system using Claude + Capital.com"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "mcp[cli]>=1.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "capital-com-mcp-server",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
cfd-trading = "cfd_trading.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
